updates to todos and remake framework

--- a/bundle/project-files/pages/todo-list.hbs
+++ b/bundle/project-files/pages/todo-list.hbs
@@ -1,6 +1,24 @@
-<div class="todo-lists">Todo list page</div>
-{{> todo}}
-<button 
-  class="button"
-  data-i-new="todoList .todo-lists"
->Add Todo List</button>
+<div
+  class="page"
+  data-o-save-deep="defaultSave id:{{currentItem.id}}"
+  data-o-type="object"
+  data-o-key-id="{{currentItem.id}}"
+>
+  <a class="text-link block m-b-32" href="/{{pageAuthor.details.username}}">Go back</a>
+  <h2 class="page__heading">Todos</h2>
+  <div 
+    class="todos"
+    data-o-key="todos"
+    data-o-type="list"
+  >
+    {{#each currentItem.todos}}
+      {{> todo todo=this pageAuthor=@root.pageAuthor}}
+    {{/each}}
+  </div>
+  <div class="flex justify-content--flex-end">
+    <button 
+      class="button"
+      data-i-new="todo .todos"
+    >Add Todo</button>
+  </div>
+</div>
