--- a/bundle/project-files/assets/sass/helpers/_base.sass
+++ b/bundle/project-files/assets/sass/helpers/_base.sass
@@ -1,6 +1,7 @@
 body
   overflow-x: scroll
   padding: 1.5rem
+  color: #212529
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
 
 *
