--- a/bundle/project-files/assets/sass/main.sass
+++ b/bundle/project-files/assets/sass/main.sass
@@ -1,9 +1,21 @@
+// base
 @import 'helpers/open-color'
 @import 'helpers/colors'
 @import 'helpers/base'
 @import 'helpers/spacing'
-@import 'helpers/flash'
+
+// helpers
+@import 'helpers/display'
+
+// basic components
 @import 'helpers/buttons'
-@import 'helpers/text-field'
+@import 'helpers/flash'
+@import 'helpers/links'
+@import 'helpers/page'
 @import 'helpers/site-nav'
+@import 'helpers/text-field'
+@import 'helpers/todo-list'
+@import 'helpers/todos'
+
+// pages
 @import 'helpers/accounts'
