--- a/bundle/project-files/pages/index.hbs
+++ b/bundle/project-files/pages/index.hbs
@@ -1,18 +1,33 @@
-<div
-  data-o-save-deep="defaultSave"
-  data-o-type="object"
->
-  <div 
-    class="todo-lists"
-    data-o-key="todoLists"
-    data-o-type="list"
+{{#if pageHasAppData}}
+  <div
+    class="page"
+    data-o-save-deep="defaultSave"
+    data-o-type="object"
   >
-    {{#each data.todoLists}}
-      {{> todoList todoList=this}}
-    {{/each}}
+    <h2 class="page__heading">Todo Lists</h2>
+    <div 
+      class="todo-lists"
+      data-o-key="todoLists"
+      data-o-type="list"
+    >
+      {{#each data.todoLists}}
+        {{> todoList todoList=this pageAuthor=@root.pageAuthor}}
+      {{/each}}
+    </div>
+    <div class="flex justify-content--flex-end">
+      <button 
+        class="button"
+        data-i-new="todoList .todo-lists"
+      >Add Todo List</button>
+    </div>
   </div>
-</div>
-<button 
-  class="button"
-  data-i-new="todoList .todo-lists"
->Add Todo List</button>
+{{else}}
+  <div class="page">
+    <h2 class="page__heading">Welcome to Todos!</h2>
+    {{#if currentUser}}
+      <a class="button" href="/{{currentUser.details.username}}">Go to your todo lists</a>
+    {{else}}
+      <a class="button" href="/signup">Sign up!</a>
+    {{/if}}
+  </div>
+{{/if}}
