--- a/bundle/project-files/pages/todo-list.hbs
+++ b/bundle/project-files/pages/todo-list.hbs
@@ -1,11 +1,10 @@
 <div
   class="page"
-  data-o-save-deep="defaultSave id:{{currentItem.id}}"
   data-o-type="object"
   data-o-key-id="{{currentItem.id}}"
 >
   <a class="text-link block m-b-32" href="/{{pageAuthor.details.username}}">Go back</a>
-  <h2 class="page__heading">Todos</h2>
+  <h2 class="page__heading">{{currentItem.name}}</h2>
   <div 
     class="todos"
     data-o-key="todos"
