--- a/bundle/project-files/partials/todoList.hbs
+++ b/bundle/project-files/partials/todoList.hbs
@@ -11,6 +11,11 @@
   <span 
     class="todo-lists__edit js-pd" 
     href="#"
-    data-i-editable-with-remove="name(text-single-line)"
+    data-i-editable-with-hide=""
   >Edit</span>
+  <span 
+    class="todo-lists__remove js-pd" 
+    href="#"
+    data-i-remove=""
+  >Remove</span>
 </a>
