--- a/bundle/project-files/assets/sass/helpers/_buttons.sass
+++ b/bundle/project-files/assets/sass/helpers/_buttons.sass
@@ -1,4 +1,4 @@
-.button
+button, .button
   border: none
   margin: 0
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
