fix framework starter project syntax

--- a/bundle/project-files/partials/todo.hbs
+++ b/bundle/project-files/partials/todo.hbs
@@ -10,7 +10,7 @@
   </div>
   <div 
     class="todos__todo-text"
-    data-i-editable-with-remove="text(text-single-line)"
+    data-i-editable="text(text-single-line)"
     data-w-key-text="innerText"
   >{{todo.text}}</div>
 </div>
