creating doc site with 11ty

--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -1,12 +1,14 @@
+---
+title: My Rad Blog
+---
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Rad Markdown Blog Post</title>
+    <title>{{ title }}</title>
   </head>
   <body>
-    <h1>Hello</h1>
-
+    {{{ content }}}
   </body>
 </html>
