improving front page

--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -30,16 +30,27 @@ title: Remake - A framework for building CRUD web apps quickly
           <div class="sidebar__list"><a class="sidebar__list-item sidebar__list-item--selected" href="#">Intro &amp; Quick Start</a></div>
         </div>
         <div class="sidebar__list-container">
-          <div class="sidebar__list-heading">GETTING STARTED</div>
-          <div class="sidebar__list"><a class="sidebar__list-item" href="#">Turning things on &amp; off</a><a class="sidebar__list-item" href="#">Attaching Data to HTML</a><a class="sidebar__list-item" href="#">Modifying Data</a><a class="sidebar__list-item" href="#">Saving Data</a><a class="sidebar__list-item" href="#">Positioning Elements</a><a class="sidebar__list-item" href="#">Reacting to Changes</a><a class="sidebar__list-item" href="#">What Can We Build?</a><a class="sidebar__list-item" href="#">Best Practices</a></div>
+          <div class="sidebar__list-heading">STEP-BY-STEP TUTORIAL</div>
+          <div class="sidebar__list">
+            <a class="sidebar__list-item" href="#">Creating a Project</a>
+            <a class="sidebar__list-item" href="#">Adding Data</a>
+            <a class="sidebar__list-item" href="#">Modifying Data</a>
+            <a class="sidebar__list-item" href="#">Saving Data</a>
+            <a class="sidebar__list-item" href="#">Nesting Data</a>
+          </div>
         </div>
         <div class="sidebar__list-container">
-          <div class="sidebar__list-heading">API</div>
-          <div class="sidebar__list"><a class="sidebar__list-item" href="#">API Reference</a></div>
+          <div class="sidebar__list-heading">REFERENCE</div>
+          <div class="sidebar__list">
+            <a class="sidebar__list-item" href="#">Remake API</a>
+          </div>
         </div>
         <div class="sidebar__list-container">
           <div class="sidebar__list-heading">ABOUT</div>
-          <div class="sidebar__list"><a class="sidebar__list-item" href="#">About this Project</a><a class="sidebar__list-item" href="#">About the Author</a></div>
+          <div class="sidebar__list">
+            <a class="sidebar__list-item" href="#">Why Remake</a>
+            <a class="sidebar__list-item" href="#">Contributors</a>
+          </div>
         </div>
       </div>
       <div class="main">
