--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -54,7 +54,9 @@ title: Remake - A framework for building CRUD web apps quickly
         </div>
       </div>
       <div class="main">
+        <a class="github-link github-link--top" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
         {{{ content }}}
+        <a class="github-link github-link--footer" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
       </div>
     </div>
     <script src="/static/prism.js"></script>
