--- a/site-src/static/style.css
+++ b/site-src/static/style.css
@@ -164,7 +164,7 @@ pre code, pre[class*="language-"] code {
   margin-bottom: 6px;
   padding: 10px 20px 12px 30px;
   font-weight: 500;
-  color: #ffb567;
+  color: #ffc767;
   text-transform: uppercase
 }
 
