--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -37,23 +37,11 @@ h1 a, h2 a {
   text-decoration-color: #4dabf7;
 }
 
-.slanted-link {
-  display: inline-block;
-  transform: skew(-20deg);
-  line-height: 1.4em;
-  font-size: 21px;
-  font-weight: 600;
-  text-decoration: none;
-  color: #fff;
-  background-color: #2263e9;
-  box-shadow: 4px 5px 0 #b6e0ff;
-}
-
 h1 {
   margin-top: 1.5em;
   margin-bottom: 1em;
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 2.5rem;
   line-height: 1.2em;
 }
 
@@ -75,6 +63,11 @@ h3 {
   font-size: 1.5em;
   font-weight: bold;
   background-color: #FBC9DA
+}
+
+h3 code {
+  color: #212529;
+  background-color: transparent;
 }
 
 h4 {
@@ -261,6 +254,18 @@ pre code, pre[class*="language-"] code {
 }
 
 /* UTILS */
+
+.slanted-link {
+  display: inline-block;
+  transform: skew(-20deg);
+  line-height: 1.4em;
+  font-size: 21px;
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+  background-color: #2263e9;
+  box-shadow: 4px 5px 0 #b6e0ff;
+}
 
 .slanted-link > * {
   display: inline-block;
