Get starter project back to normal

--- a/bundle/project-files/assets/sass/helpers/_todo-list.sass
+++ b/bundle/project-files/assets/sass/helpers/_todo-list.sass
@@ -11,7 +11,7 @@
     &:hover
       background-color: #f8f9fa
       border-color: #adb5bd
-  &__edit, &__remove
+  &__edit
     margin-left: auto
     text-transform: uppercase
     text-decoration: underline
@@ -19,5 +19,3 @@
     color: #868E96
     &:hover
       text-decoration: none
-  &__remove
-    margin-left: 16px
