--- a/bundle/project-files/partials/todoList.hbs
+++ b/bundle/project-files/partials/todoList.hbs
@@ -11,11 +11,6 @@
   <span 
     class="todo-lists__edit js-pd" 
     href="#"
-    data-i-editable-with-hide=""
+    data-i-editable=""
   >Edit</span>
-  <span 
-    class="todo-lists__remove js-pd" 
-    href="#"
-    data-i-remove=""
-  >Remove</span>
 </a>
