Lots of improvements!
• data-i-click-to-save attribute doesn't need a value to work
• editable popovers will be automatically suppressed if the user isn't logged in
• if you're on a route with a unique id in it, a warning will pop up if there's no data key with an id that matches it
• attributes are added to the <body> element to inform you the status of the app: data-user-logged-in, data-user-not-logged-in, data-base-route, data-username-route, data-item-route
• the full handlebars helpers library has been added

--- a/bundle/project-files/layouts/default.hbs
+++ b/bundle/project-files/layouts/default.hbs
@@ -7,7 +7,11 @@
 </head>
 <body>
   <nav class="site-nav" role="navigation" aria-label="main navigation">
-    <a class="site-nav__home" href="/">Todos</a>
+    {{#if currentUser}}
+      <a class="site-nav__home" href="/{{currentUser.details.username}}">Todos</a>
+    {{else}}
+      <a class="site-nav__home" href="/">Todos</a>
+    {{/if}}
     <div class="site-nav__right">
       {{#if currentUser}}
         <span class="text--white m-r-16">Hi {{currentUser.details.username}}!</span>
