--- a/bundle/project-files/pages/todo-list.hbs
+++ b/bundle/project-files/pages/todo-list.hbs
@@ -17,7 +17,7 @@
   <div class="flex justify-content--flex-end">
     <button 
       class="button"
-      data-i-new="todo .todos"
+      data-i-new="todo"
     >Add Todo</button>
   </div>
 </div>
