--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -27,29 +27,49 @@ title: Remake - A framework for building CRUD web apps quickly
       <div class="sidebar">
         <div class="sidebar__list-container">
           <div class="sidebar__list-heading">INTRO</div>
-          <div class="sidebar__list"><a class="sidebar__list-item sidebar__list-item--selected" href="#">Intro &amp; Quick Start</a></div>
-        </div>
-        <div class="sidebar__list-container">
-          <div class="sidebar__list-heading">STEP-BY-STEP TUTORIAL</div>
           <div class="sidebar__list">
-            <a class="sidebar__list-item" href="#">Creating a Project</a>
-            <a class="sidebar__list-item" href="#">Adding Data</a>
-            <a class="sidebar__list-item" href="#">Modifying Data</a>
-            <a class="sidebar__list-item" href="#">Saving Data</a>
-            <a class="sidebar__list-item" href="#">Nesting Data</a>
+            <a class="sidebar__list-item {{#isPage page.url "/"}}sidebar__list-item--selected{{/isPage}}" href="/">What is Remake?</a>
+            <a class="sidebar__list-item {{#isPage page.url "install-and-setup"}}sidebar__list-item--selected{{/isPage}}" href="/install-and-setup">Install &amp; Setup</a>
           </div>
         </div>
         <div class="sidebar__list-container">
-          <div class="sidebar__list-heading">REFERENCE</div>
+          <div class="sidebar__list-heading">TUTORIAL</div>
           <div class="sidebar__list">
-            <a class="sidebar__list-item" href="#">Remake API</a>
+            <a class="sidebar__list-item {{#isPage page.url "introducing-remake"}}sidebar__list-item--selected{{/isPage}}" href="/introducing-remake">Introducing Remake</a>
+            <a class="sidebar__list-item {{#isPage page.url "installing-and-setting-up-remake"}}sidebar__list-item--selected{{/isPage}}" href="/installing-and-setting-up-remake">Installing & Setting Up Remake</a>
+            <a class="sidebar__list-item {{#isPage page.url "attach-data-to-elements"}}sidebar__list-item--selected{{/isPage}}" href="/attach-data-to-elements">Attach Data to Elements</a>
+            <a class="sidebar__list-item {{#isPage page.url "rendering-data"}}sidebar__list-item--selected{{/isPage}}" href="/rendering-data">Rendering Data</a>
+            <a class="sidebar__list-item {{#isPage page.url "making-data-editable"}}sidebar__list-item--selected{{/isPage}}" href="/making-data-editable">Making Data Editable</a>
+            <a class="sidebar__list-item {{#isPage page.url "adding-new-items"}}sidebar__list-item--selected{{/isPage}}" href="/adding-new-items">Adding New Items</a>
+            <a class="sidebar__list-item {{#isPage page.url "sorting-lists-of-items"}}sidebar__list-item--selected{{/isPage}}" href="/sorting-lists-of-items">Sorting Lists of Items</a>
+            <a class="sidebar__list-item {{#isPage page.url "deploy-a-remake-web-app"}}sidebar__list-item--selected{{/isPage}}" href="/deploy-a-remake-web-app">Deploy a Remake Web App</a>
+          </div>
+        </div>
+        <div class="sidebar__list-container">
+          <div class="sidebar__list-heading">HOW REMAKE WORKS</div>
+          <div class="sidebar__list">
+            <a class="sidebar__list-item {{#isPage page.url "command-line-tool"}}sidebar__list-item--selected{{/isPage}}" href="/command-line-tool">Command Line Tool</a>
+            <a class="sidebar__list-item {{#isPage page.url "data"}}sidebar__list-item--selected{{/isPage}}" href="/data">Data</a>
+            <a class="sidebar__list-item {{#isPage page.url "saving"}}sidebar__list-item--selected{{/isPage}}" href="/saving">Saving</a>
+            <a class="sidebar__list-item {{#isPage page.url "routing"}}sidebar__list-item--selected{{/isPage}}" href="/routing">Routing</a>
+            <a class="sidebar__list-item {{#isPage page.url "templating"}}sidebar__list-item--selected{{/isPage}}" href="/templating">Templating</a>
+            <a class="sidebar__list-item {{#isPage page.url "sortable-items"}}sidebar__list-item--selected{{/isPage}}" href="/sortable-items">Sortable items</a>
+            <a class="sidebar__list-item {{#isPage page.url "user-accounts"}}sidebar__list-item--selected{{/isPage}}" href="/user-accounts">User accounts</a>
+          </div>
+        </div>
+        <div class="sidebar__list-container">
+          <div class="sidebar__list-heading">DATA ATTRIBUTES API</div>
+          <div class="sidebar__list">
+            <a class="sidebar__list-item {{#isPage page.url "output-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/output-attributes">Output attributes</a>
+            <a class="sidebar__list-item {{#isPage page.url "input-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/input-attributes">Input attributes</a>
+            <a class="sidebar__list-item {{#isPage page.url "watcher-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/watcher-attributes">Watcher attributes</a>
           </div>
         </div>
         <div class="sidebar__list-container">
           <div class="sidebar__list-heading">ABOUT</div>
           <div class="sidebar__list">
-            <a class="sidebar__list-item" href="#">Why Remake</a>
-            <a class="sidebar__list-item" href="#">Contributors</a>
+            <a class="sidebar__list-item {{#isPage page.url "why-remake"}}sidebar__list-item--selected{{/isPage}}" href="/why-remake">Why Remake</a>
+            <a class="sidebar__list-item {{#isPage page.url "contributors"}}sidebar__list-item--selected{{/isPage}}" href="/contributors">Contributors</a>
           </div>
         </div>
       </div>
@@ -61,19 +81,5 @@ title: Remake - A framework for building CRUD web apps quickly
     </div>
     <script src="/static/prism.js"></script>
     <script src="/static/main.js"></script>
-    <script>
-      window.productHuntUpcoming = {
-        appId: 20634,
-        position: 'bottomLeft',
-      };
-
-      (function(doc, scr, src, a, b) {
-        a = doc.createElement(scr);
-        b = doc.getElementsByTagName(scr)[0];
-        a.async = true;
-        a.src = src;
-        b.parentNode.insertBefore(a, b);
-      })(document, 'script', 'https://assets.producthunt.com/assets/upwigloader.js');
-    </script>
   </body>
 </html>
