adding another page

--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -31,6 +31,7 @@ title: Remake - A framework for building CRUD web apps quickly
             <a class="sidebar__list-item {{#isPage page.url "/"}}sidebar__list-item--selected{{/isPage}}" href="/">What is Remake?</a>
             <a class="sidebar__list-item {{#isPage page.url "install-and-setup"}}sidebar__list-item--selected{{/isPage}}" href="/install-and-setup">Install &amp; Setup</a>
             <a class="sidebar__list-item {{#isPage page.url "high-level-overview"}}sidebar__list-item--selected{{/isPage}}" href="/high-level-overview">High-level Overview</a>
+            <a class="sidebar__list-item {{#isPage page.url "a-simple-example-app"}}sidebar__list-item--selected{{/isPage}}" href="/a-simple-example-app">A Simple Example App</a>
           </div>
         </div>
         <div class="sidebar__list-container">
