--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -10,6 +10,7 @@ title: Remake - A framework for building CRUD web apps quickly
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="/static/normalize-min.css">
     <link rel="stylesheet" href="/static/prism.css">
+    <link rel="stylesheet" href="/static/slideout.css">
     <link rel="stylesheet" href="/static/style.css?v=5">
     <!-- favicon: -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -23,8 +24,9 @@ title: Remake - A framework for building CRUD web apps quickly
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <div class="page">
+    <div id="menu">
       <div class="sidebar">
+        <div class="spacer--32"></div>
         <div class="sidebar__list-container">
           <div class="sidebar__list-heading">INTRO</div>
           <div class="sidebar__list">
@@ -75,12 +77,69 @@ title: Remake - A framework for building CRUD web apps quickly
           </div>
         </div>
       </div>
-      <div class="main">
-        <a class="github-link github-link--top" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
-        {{{ content }}}
-        <a class="github-link github-link--footer" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
+    </div>
+    <div id="panel">
+      <div class="page">
+        <div class="sidebar hide-on-mobile">
+          <div class="sidebar__list-container">
+            <div class="sidebar__list-heading">INTRO</div>
+            <div class="sidebar__list">
+              <a class="sidebar__list-item {{#isPage page.url "/"}}sidebar__list-item--selected{{/isPage}}" href="/">What is Remake?</a>
+              <a class="sidebar__list-item {{#isPage page.url "install-and-setup"}}sidebar__list-item--selected{{/isPage}}" href="/install-and-setup">Install &amp; Setup</a>
+              <a class="sidebar__list-item {{#isPage page.url "high-level-overview"}}sidebar__list-item--selected{{/isPage}}" href="/high-level-overview">High-level Overview</a>
+              <a class="sidebar__list-item {{#isPage page.url "a-simple-example-app"}}sidebar__list-item--selected{{/isPage}}" href="/a-simple-example-app">A Simple Example App</a>
+            </div>
+          </div>
+          <div class="sidebar__list-container">
+            <div class="sidebar__list-heading">TUTORIAL</div>
+            <div class="sidebar__list">
+              <a class="sidebar__list-item {{#isPage page.url "introducing-remake"}}sidebar__list-item--selected{{/isPage}}" href="/introducing-remake">Introducing Remake</a>
+              <a class="sidebar__list-item {{#isPage page.url "installing-and-setting-up-remake"}}sidebar__list-item--selected{{/isPage}}" href="/installing-and-setting-up-remake">Installing & Setting Up Remake</a>
+              <a class="sidebar__list-item {{#isPage page.url "attach-data-to-elements"}}sidebar__list-item--selected{{/isPage}}" href="/attach-data-to-elements">Attach Data to Elements</a>
+              <a class="sidebar__list-item {{#isPage page.url "rendering-data"}}sidebar__list-item--selected{{/isPage}}" href="/rendering-data">Rendering Data</a>
+              <a class="sidebar__list-item {{#isPage page.url "making-data-editable"}}sidebar__list-item--selected{{/isPage}}" href="/making-data-editable">Making Data Editable</a>
+              <a class="sidebar__list-item {{#isPage page.url "adding-new-items"}}sidebar__list-item--selected{{/isPage}}" href="/adding-new-items">Adding New Items</a>
+              <a class="sidebar__list-item {{#isPage page.url "sorting-lists-of-items"}}sidebar__list-item--selected{{/isPage}}" href="/sorting-lists-of-items">Sorting Lists of Items</a>
+              <a class="sidebar__list-item {{#isPage page.url "deploy-a-remake-web-app"}}sidebar__list-item--selected{{/isPage}}" href="/deploy-a-remake-web-app">Deploy a Remake Web App</a>
+            </div>
+          </div>
+          <div class="sidebar__list-container">
+            <div class="sidebar__list-heading">HOW REMAKE WORKS</div>
+            <div class="sidebar__list">
+              <a class="sidebar__list-item {{#isPage page.url "command-line-tool"}}sidebar__list-item--selected{{/isPage}}" href="/command-line-tool">Command Line Tool</a>
+              <a class="sidebar__list-item {{#isPage page.url "data"}}sidebar__list-item--selected{{/isPage}}" href="/data">Data</a>
+              <a class="sidebar__list-item {{#isPage page.url "saving"}}sidebar__list-item--selected{{/isPage}}" href="/saving">Saving</a>
+              <a class="sidebar__list-item {{#isPage page.url "routing"}}sidebar__list-item--selected{{/isPage}}" href="/routing">Routing</a>
+              <a class="sidebar__list-item {{#isPage page.url "templating"}}sidebar__list-item--selected{{/isPage}}" href="/templating">Templating</a>
+              <a class="sidebar__list-item {{#isPage page.url "sortable-items"}}sidebar__list-item--selected{{/isPage}}" href="/sortable-items">Sortable items</a>
+              <a class="sidebar__list-item {{#isPage page.url "user-accounts"}}sidebar__list-item--selected{{/isPage}}" href="/user-accounts">User accounts</a>
+            </div>
+          </div>
+          <div class="sidebar__list-container">
+            <div class="sidebar__list-heading">DATA ATTRIBUTES API</div>
+            <div class="sidebar__list">
+              <a class="sidebar__list-item {{#isPage page.url "output-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/output-attributes">Output attributes</a>
+              <a class="sidebar__list-item {{#isPage page.url "input-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/input-attributes">Input attributes</a>
+              <a class="sidebar__list-item {{#isPage page.url "watcher-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/watcher-attributes">Watcher attributes</a>
+            </div>
+          </div>
+          <div class="sidebar__list-container">
+            <div class="sidebar__list-heading">ABOUT</div>
+            <div class="sidebar__list">
+              <a class="sidebar__list-item {{#isPage page.url "why-remake"}}sidebar__list-item--selected{{/isPage}}" href="/why-remake">Why Remake</a>
+              <a class="sidebar__list-item {{#isPage page.url "contributors"}}sidebar__list-item--selected{{/isPage}}" href="/contributors">Contributors</a>
+            </div>
+          </div>
+        </div>
+        <div class="main">
+          <a class="github-link github-link--top" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
+          {{{ content }}}
+          <a class="github-link github-link--footer" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
+        </div>
       </div>
     </div>
+    <a class="toggle-button" href="#">☰ Menu</a>
+    <script src="/static/slideout.min.js"></script>
     <script src="/static/prism.js"></script>
     <script src="/static/main.js"></script>
   </body>
