--- a/site-src/static/style.css
+++ b/site-src/static/style.css
@@ -346,7 +346,25 @@ img {
   font-size: 15px !important;
 }
 
+.toggle-button {
+  position: fixed;
+  z-index: 99999;
+  top: 16px;
+  left: 16px;
+  display: none;
+  padding: 8px 16px 10px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #3d76e8;
+  border-radius: 999px;
+  border: 3px solid white;
+}
+
 @media (max-width: 1100px) {
+  .toggle-button {
+    display: block;
+  }
+
   .logo {
     margin-top: 2rem;
   }
@@ -355,7 +373,7 @@ img {
     margin-left: 0;
   }
 
-  .sidebar {
+  .sidebar.hide-on-mobile {
     display: none;
   }
 
