--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -77,6 +77,7 @@ title: Remake - A framework for building CRUD web apps quickly
             <a class="sidebar__list-item {{#isPage page.url "contributors"}}sidebar__list-item--selected{{/isPage}}" href="/contributors">Contributors</a>
           </div>
         </div>
+        <div class="spacer--48"></div>
       </div>
     </div>
     <div id="panel">
