--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -70,14 +70,13 @@ title: Remake - A framework for building CRUD web apps quickly
             <a class="sidebar__list-item {{#isPage page.url "watcher-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/watcher-attributes">Watcher attributes</a>
           </div>
         </div>
-        <div class="sidebar__list-container">
+        <div class="sidebar__list-container" style="margin-bottom: 100px;">
           <div class="sidebar__list-heading">ABOUT</div>
           <div class="sidebar__list">
             <a class="sidebar__list-item {{#isPage page.url "why-remake"}}sidebar__list-item--selected{{/isPage}}" href="/why-remake">Why Remake</a>
             <a class="sidebar__list-item {{#isPage page.url "contributors"}}sidebar__list-item--selected{{/isPage}}" href="/contributors">Contributors</a>
           </div>
         </div>
-        <div class="spacer--48"></div>
       </div>
     </div>
     <div id="panel">
