--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -65,9 +65,9 @@ title: Remake - A framework for building CRUD web apps quickly
         <div class="sidebar__list-container">
           <div class="sidebar__list-heading">DATA ATTRIBUTES API</div>
           <div class="sidebar__list">
-            <a class="sidebar__list-item {{#isPage page.url "output-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/output-attributes">Output attributes</a>
-            <a class="sidebar__list-item {{#isPage page.url "input-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/input-attributes">Input attributes</a>
-            <a class="sidebar__list-item {{#isPage page.url "watcher-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/watcher-attributes">Watcher attributes</a>
+            <a class="sidebar__list-item {{#isPage page.url "data-attributes-api"}}sidebar__list-item--selected{{/isPage}}" href="/data-attributes-api">Output attributes</a>
+            <a class="sidebar__list-item {{#isPage page.url "data-attributes-api#data-i"}}sidebar__list-item--selected{{/isPage}}" href="/data-attributes-api#data-i">Input attributes</a>
+            <a class="sidebar__list-item {{#isPage page.url "data-attributes-api#data-w"}}sidebar__list-item--selected{{/isPage}}" href="/data-attributes-api#data-w">Watcher attributes</a>
           </div>
         </div>
         <div class="sidebar__list-container" style="margin-bottom: 100px;">
@@ -119,9 +119,9 @@ title: Remake - A framework for building CRUD web apps quickly
           <div class="sidebar__list-container">
             <div class="sidebar__list-heading">DATA ATTRIBUTES API</div>
             <div class="sidebar__list">
-              <a class="sidebar__list-item {{#isPage page.url "output-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/output-attributes">Output attributes</a>
-              <a class="sidebar__list-item {{#isPage page.url "input-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/input-attributes">Input attributes</a>
-              <a class="sidebar__list-item {{#isPage page.url "watcher-attributes"}}sidebar__list-item--selected{{/isPage}}" href="/watcher-attributes">Watcher attributes</a>
+              <a class="sidebar__list-item {{#isPage page.url "data-attributes-api"}}sidebar__list-item--selected{{/isPage}}" href="/data-attributes-api">Output attributes</a>
+              <a class="sidebar__list-item {{#isPage page.url "data-attributes-api#data-i"}}sidebar__list-item--selected{{/isPage}}" href="/data-attributes-api#data-i">Input attributes</a>
+              <a class="sidebar__list-item {{#isPage page.url "data-attributes-api#data-w"}}sidebar__list-item--selected{{/isPage}}" href="/data-attributes-api#data-w">Watcher attributes</a>
             </div>
           </div>
           <div class="sidebar__list-container">
