--- a/site-src/static/style.css
+++ b/site-src/static/style.css
@@ -146,6 +146,20 @@ img {
   max-width: 100%;
 }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 /* PAGE LAYOUT */
 
@@ -164,7 +178,7 @@ img {
 
 .main {
   position: relative;
-  width: 900px;
+  width: 800px;
   padding: 45px 46px 48px;
   border-right: 1px solid #212529;
   border-left: 1px solid #212529;
