--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -34,9 +34,15 @@ title: Remake - A framework for building CRUD web apps quickly
             <div class="sidebar__list-heading">INTRO</div>
             <div class="sidebar__list">
               <a class="sidebar__list-item {{#isPage page.url "/"}}sidebar__list-item--selected{{/isPage}}" href="/">What is Remake?</a>
-              <a class="sidebar__list-item {{#isPage page.url "install-and-setup"}}sidebar__list-item--selected{{/isPage}}" href="/install-and-setup">Install &amp; Setup</a>
+              <a class="sidebar__list-item {{#isPage page.url "what-is-crud"}}sidebar__list-item--selected{{/isPage}}" href="/what-is-crud">What is CRUD?</a>
               <a class="sidebar__list-item {{#isPage page.url "high-level-overview"}}sidebar__list-item--selected{{/isPage}}" href="/high-level-overview">High-level Overview</a>
               <a class="sidebar__list-item {{#isPage page.url "a-simple-example-app"}}sidebar__list-item--selected{{/isPage}}" href="/a-simple-example-app">A Simple Example App</a>
+            </div>
+          </div>
+          <div class="sidebar__list-container">
+            <div class="sidebar__list-heading">GETTING STARTED</div>
+            <div class="sidebar__list">
+              <a class="sidebar__list-item {{#isPage page.url "install-and-setup"}}sidebar__list-item--selected{{/isPage}}" href="/install-and-setup">Install &amp; Setup</a>
             </div>
           </div>
           <div class="sidebar__list-container">
@@ -58,6 +64,7 @@ title: Remake - A framework for building CRUD web apps quickly
               <a class="sidebar__list-item {{#isPage page.url "command-line-tool"}}sidebar__list-item--selected{{/isPage}}" href="/command-line-tool">Command Line Tool</a>
               <a class="sidebar__list-item {{#isPage page.url "data"}}sidebar__list-item--selected{{/isPage}}" href="/data">Data</a>
               <a class="sidebar__list-item {{#isPage page.url "saving"}}sidebar__list-item--selected{{/isPage}}" href="/saving">Saving</a>
+              <a class="sidebar__list-item {{#isPage page.url "file-uploads"}}sidebar__list-item--selected{{/isPage}}" href="/file-uploads">File Uploads</a>
               <a class="sidebar__list-item {{#isPage page.url "routing"}}sidebar__list-item--selected{{/isPage}}" href="/routing">Routing</a>
               <a class="sidebar__list-item {{#isPage page.url "templating"}}sidebar__list-item--selected{{/isPage}}" href="/templating">Templating</a>
               <a class="sidebar__list-item {{#isPage page.url "sortable-items"}}sidebar__list-item--selected{{/isPage}}" href="/sortable-items">Sortable items</a>
