--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -23,6 +23,10 @@ title: Remake - A framework for building CRUD web apps quickly
     <meta name="application-name" content="Remake">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
+    <!-- OG meta tags -->
+    {{{meta}}}
+    <meta name="og:site_name" content="Remake Framework Documentation">
+    <meta name="og:type" content="website">
   </head>
   <body>
     <div id="menu">
