--- a/site-src/_includes/layout.hbs
+++ b/site-src/_includes/layout.hbs
@@ -92,10 +92,10 @@ title: Remake - A framework for building CRUD web apps quickly
           </div>
         </div>
         <div class="main">
-          <a class="github-link github-link--top" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
+          <a class="github-link github-link--top" href="https://github.com/remake/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
           {{{ content }}}
           <div class="spacer--16"></div>
-          <a class="github-link github-link--footer" href="https://github.com/panphora/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
+          <a class="github-link github-link--footer" href="https://github.com/remake/remake" target="_blank"><img src="/static/github.svg"> View on GitHub</a>
         </div>
       </div>
     </div>
